[package]
name = "discard"
version = "1.0.3"
authors = ["Pauan <pcxunlimited@gmail.com>"]
description = "Discard trait which allows for intentionally leaking memory"
repository = "https://github.com/Pauan/rust-discard"
homepage = "https://github.com/Pauan/rust-discard"
readme = "README.md"
license = "MIT"
keywords = ["discard", "cancel", "revoke", "drop", "leak"]
categories = ["memory-management"]

[dependencies]
